--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -28,8 +28,10 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:inputType="textImeMultiLine"
-        android:hint="Nosaukums" />
+        android:inputType="textCapSentences"
+        android:hint="Nosaukums"
+        android:maxLines="1"
+        />
 
     <EditText
         android:layout_width="wrap_content"
@@ -42,8 +44,11 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:editable="false"
-        android:inputType="text"
-        android:hint="Datums" />
+        android:hint="Datums"
+        android:maxLines="1"
+        android:inputType="date"
+        />
+
 
     <EditText
         android:layout_width="wrap_content"
@@ -55,8 +60,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:inputType="text"
-        android:hint="Cena" />
+        android:inputType="numberDecimal"
+        android:hint="Cena"
+        android:maxLines="1"
+        />
 
     <EditText
         android:layout_width="wrap_content"
@@ -68,8 +75,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:inputType="textImeMultiLine"
-        android:hint="Informacija" />
+        android:inputType="textCapSentences"
+        android:hint="Informacija"
+        android:maxLines="5"
+        />
 
     <Button
         android:layout_width="wrap_content"
@@ -79,5 +88,6 @@
         android:layout_marginBottom="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="addSludinajums" />
+        android:onClick="addSludinajums"
+        android:clickable="true" />
 </RelativeLayout>
