--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,25 +7,43 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.kriss.galadarbs.Main_Activity">
+    tools:context="com.example.kriss.galadarbs.Main_Activity"
+    android:background="@drawable/background">
+
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pievienot Sludinajumu"
+        android:text="Pievienot&#10;sludinajumu"
         android:id="@+id/button"
+        android:layout_marginTop="138dp"
+        android:onClick="addContacts"
+        android:background="@drawable/colorbutton"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="134dp"
-        android:onClick="addContacts" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Apskatit Sludinajumus"
+        android:text="Apskatit&#10;sludinajumus"
         android:id="@+id/button2"
         android:onClick="viewContact"
-        android:layout_centerVertical="true"
-        android:layout_alignRight="@+id/button"
-        android:layout_alignEnd="@+id/button" />
+        android:background="@drawable/colorbutton"
+        android:layout_marginTop="51dp"
+        android:layout_below="@+id/button"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignStart="@+id/button" />
+
+    <Button
+        android:layout_width="40dp"
+        android:layout_height="50dp"
+        android:text=""
+        android:id="@+id/imageButton4"
+        android:background="@drawable/logout"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:clickable="true"
+        android:onClick="ietAtpakal" />
+
 </RelativeLayout>
