--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.kriss.galadarbs.Users">
+    tools:context="com.example.kriss.galadarbs.Users"
+    android:background="@drawable/background">
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,7 +32,7 @@
         android:inputType="textCapSentences"
         android:hint="Nosaukums"
         android:maxLines="1"
-        />
+        android:textColor="#000000" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -47,7 +48,7 @@
         android:hint="Datums"
         android:maxLines="1"
         android:inputType="date"
-        />
+        android:textColor="#000000" />
 
 
     <EditText
@@ -63,7 +64,7 @@
         android:inputType="numberDecimal"
         android:hint="Cena"
         android:maxLines="1"
-        />
+        android:textColor="#000000" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -77,17 +78,28 @@
         android:layout_alignParentEnd="true"
         android:inputType="textCapSentences"
         android:hint="Informacija"
-        android:maxLines="5"
-        />
+        android:maxLines="5" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/saglabat"
         android:id="@+id/btnSaglabatSlud"
-        android:layout_marginBottom="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:onClick="addSludinajums"
-        android:clickable="true" />
+        android:clickable="true"
+        android:background="@drawable/colorbutton"
+        android:layout_above="@+id/button3"
+        android:layout_alignLeft="@+id/jauns_slud_id"
+        android:layout_alignStart="@+id/jauns_slud_id" />
+
+    <Button
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:text="Atpakal"
+        android:background="@drawable/colorbutton"
+        android:id="@+id/button3"
+        android:onClick="ietAtpakal"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/btnSaglabatSlud"
+        android:layout_toEndOf="@+id/btnSaglabatSlud" />
 </RelativeLayout>
