--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/etName"
+        android:inputType="textCapWords"
         android:hint="Vārds"
         android:layout_above="@+id/etSurname"
         android:layout_alignRight="@+id/etSurname"
@@ -25,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/etSurname"
+        android:inputType="textCapWords"
         android:hint="Uzvārds"
         android:layout_above="@+id/etEmail"
         android:layout_alignRight="@+id/etEmail"
