--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -23,32 +23,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/slud_nosaukums"
-        android:layout_below="@+id/jauns_slud_id"
-        android:layout_marginTop="64dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:inputType="textCapSentences"
+        android:inputType="textCapWords"
         android:hint="Nosaukums"
         android:maxLines="1"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:layout_below="@+id/jauns_slud_id"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="55dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/slud_vieta"
+        android:inputType="textCapSentences"
+        android:hint="Vieta"
+        android:layout_below="@+id/slud_nosaukums"
+        android:layout_alignRight="@+id/slud_nosaukums"
+        android:layout_alignEnd="@+id/slud_nosaukums"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:id="@+id/slud_datums"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/slud_nosaukums"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:editable="false"
         android:hint="Datums"
         android:maxLines="1"
         android:inputType="date"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:layout_below="@+id/slud_vieta"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/slud_vieta"
+        android:layout_alignEnd="@+id/slud_vieta" />
 
 
     <EditText
@@ -56,29 +68,29 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:id="@+id/slud_cena"
-        android:layout_below="@+id/slud_datums"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:inputType="numberDecimal"
         android:hint="Cena"
         android:maxLines="1"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:layout_below="@+id/slud_datums"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/slud_datums"
+        android:layout_alignEnd="@+id/slud_datums" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:id="@+id/slud_info"
+        android:inputType="textCapSentences"
+        android:hint="Informacija"
+        android:maxLines="5"
         android:layout_below="@+id/slud_cena"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:inputType="textCapSentences"
-        android:hint="Informacija"
-        android:maxLines="5" />
+        android:layout_alignRight="@+id/slud_cena"
+        android:layout_alignEnd="@+id/slud_cena" />
 
     <Button
         android:layout_width="wrap_content"
@@ -102,4 +114,6 @@
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/btnSaglabatSlud"
         android:layout_toEndOf="@+id/btnSaglabatSlud" />
+
+
 </RelativeLayout>
